feat: [stabled] [done] [tested] New branch for Java21 + Spring Boot 3.3.2 + Cucumber 7.10.1